[package]
name = "enjoy"
version = "0.4.0"
authors = ["Tuncay D <mamehiscore@aol.com>"]
description = "Play any game rom with associated emulator in RetroArch"
readme = "README.md"
repository = "https://github.com/thingsiplay/enjoy/"
license-file = "LICENSE"
keywords = ["retroarch", "libretro", "emulation", "run", "launcher"]
categories = ["command-line-utilities", "emulators"]
edition = "2021"
publish = false

[dependencies]
configparser = { version = "3.0", features = ["indexmap"] }
indexmap = "2.2"
clap = { version = "4.5", features = ["derive"] }
atty = "0.2"
shellexpand = "3.1"
wildmatch = "2.3"
open = "5.1"
shlex = "1.3"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
