[package]
name = "enjoy"
version = "0.5.0"
authors = ["Tuncay D <mamehiscore@aol.com>"]
description = "Play any game rom with associated emulator in RetroArch"
readme = "README.md"
repository = "https://github.com/thingsiplay/enjoy/"
license-file = "LICENSE"
keywords = ["retroarch", "libretro", "emulation", "run", "launcher"]
categories = ["command-line-utilities", "emulators"]
edition = "2021"
publish = false

[dependencies]
configparser = { version = "3.1", features = ["indexmap"] }
indexmap = "2.7"
clap = { version = "4.5", features = ["derive"] }
atty = "0.2"
shellexpand = "3.1"
wildmatch = "2.4"
open = "5.3"
shlex = "1.3"
path-absolutize = "3.1.1"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
